feat: add internationalization support and improve CORS configuration
- Introduced ResourceBundleMessageSource for message localization in I18nConfig.
- Updated SecurityConfig to permit all requests and refined CORS settings.
- Added WebConfig for centralized CORS management.
- Enhanced CommonController to utilize session-based locale management.
- Switched database connection pool from Druid to Hikari in application.yml for better performance.